:memo:马原部分单选及前两章多选知识点

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1,3 +1,5 @@
+# 思想政治理论
+
 ## 马克思主义基本原理
 
 ### 导论
@@ -18,6 +20,12 @@
 
 8.马克思主义的基本特征，一句话概况就是：科学性和革命性的统一
 
+01.马克思主义主要由**哲学、政治经济学、科学社会主义**三大组成部分构成，来源于三大思潮最终升华的原因：
+
+| 马克思对所处时代和世界的深入观察（根本原因） | 马克思对人类社会发展规律的深刻把握（根本原因）           |
+| -------------------------------------------- | -------------------------------------------------------- |
+| 马克思拥有优良的家庭背景和教育经历           | 马克思出生和生活的德、英、法国是当时最发的的资本主义国家 |
+
 ### 第一章 世界的物质性及发展规律
 
 9.对于存在和思维，物质和意识是否具有同一性的问题，哲学可划分为**可知论和不可知论**。
@@ -26,11 +34,17 @@
 
 11.时空具有**客观性**，不依赖人的时空观或者时空知觉；**时空与物质运动不可分割**证明了时空的客观性。
 
+具体物质形态的时空是**有限**的，整个物质世界的时空是**无限**的。
+
 12.时间和空间是运动着的物质的**基本存在形式**。
 
 13.在自然界中一切都是自发产生的，而在人类社会中一切都打着人的**意识**的印记，是人的有目的的实践活动的结果。
 
 14.人类社会的发展方向由**人民群众**决定（不是由参与历史的人决定的）
+
+历史是无数个追求着自己目的的人的活动的合力。
+
+人们自己创造自己的历史。
 
 15.坚持**自信自立**，突出强调和体现的是：要把**尊重客观规律和激发创新创造活力贯通起来**。
 
@@ -48,6 +62,99 @@
 
 22.人类思维从个别到一般，又由一般到隔壁的最常见的推理形式是：**归纳和演绎**
 
+02.**主观唯心主义**：我思故我在，存在就是被感知、万物皆备于我、**物是感觉的复合**、**世界是观念的集合**
+
+03.**客观唯心主义**：世界是绝对观念的外化、世界是上帝意志的创造物
+
+04.**形而上学唯物主义物质观**的**缺陷**：
+
+①把某种特殊的物质形态误认为物质的一般
+
+②割裂了自然界与人类社会的物质统一性（不能说明社会生活的物质性）
+
+③不了解人类对物质的认识是一个永无止境的发展过程
+
+05.马克思主义物质观所体现的唯物辩证法是指
+
+* ①从个性中看到共性
+
+* ②从相对中找到绝对
+
+* ③从暂时中发现永恒
+* （**整体和局部**一般是另一个层次的概念，不会和**普遍与特殊**、**一般与个别**或**①②③**同为正确选项）
+
+06.**运动**是物质的**根本属性和存在形式**（注意，不是**时空**）
+
+07.鬼神观念是人**脑对客观世界的歪曲反映**，可以在人世间找到它的原型
+
+（注意，只有客观存在才能反映，所以不能说鬼神观念是人脑对鬼神的虚幻反映）
+
+08.人类改造世界的实践活动，使世界发生了二重分化，即：
+
+①从自然界中分化出人类社会
+
+②从客观世界中分化出主观世界
+
+09.唯物辩证法就其本质来说是批判的、革命的，因为它
+
+* ①认为凡是现存的都是应当灭亡的
+* ②对每一种既成的形式都从其暂时性方面去理解和对待
+* ③在对现存实物的肯定理解中包含对现存事物的否定理解
+
+010.**同一性**是**事物存在和发展的前提**（注意不是**斗争性**）
+
+011.**矛盾一方的发展以另一方的发展为条件**
+
+012.**解决矛盾的形式**有：
+
+* ①矛盾双方同归于尽
+* ②矛盾一方克服另一方
+* ③矛盾双方形成协同运动的新形式
+* ④矛盾双方**融合**成一个新事物（注意不可以换成**调和**，调和论否认对立双方的斗争，也就否认了事物发展）
+
+013.**量变质变规律**原理：
+
+* “天下难事，必作于易；天下大事，必作于细。”
+* “不积跬步无以至千里，不积小流无以成江海。”
+* “善不积不足以成名，恶不积不足以灭身。”
+
+014.适度原则：
+
+* 掌握火候
+* 过犹不及
+
+015.**否定之否定规律**原理：（关键是看第三阶段是否出现了更高阶段的**“回复”**）
+
+* 团结—批评—团结
+* 实践—认识—再实践
+* 古代朴素辩证法—形而上学—唯物辩证法
+* 原始公有制—私有制—共产主义公有制
+* （注：奴隶社会—封建社会—资本主义社会就不属于否定之否定，因为第三阶段没有**“回复”**）
+
+016.**区分质是认识量的前提，考察量是认识质的深化**。
+
+017.坚持**底线思维不是不要发展，也不是拒绝质变**。发展是前进的、上升的运动。
+
+018.“扬弃”是：
+
+* ①连续性和非连续性的统一
+* ②联系和发展的统一
+* ③包含着肯定的否定
+
+019.**本质**与**现象**是**相互依存**的，**不表现为现象的本质**和**不表现本质的现象**都是不存在的。
+
+020.**任何现象都从一定的方面表现着本质**，现象是本质的外在表现，即使**假象也是本质的表现**。
+
+021.本质只有通过理性思维才能把握，**现象**是**多变易逝**的，**本质**是**相对稳定**的。
+
+022.**现象**有**真像**和**假象**之分，**假象**与**错觉**不是一回事。
+
+023.**主观辩证法**是**客观辩证法**在**人的思维中的反映**。
+
+024.客观辩证法与主观辩证法在**本质上是统一的**，但在**表现形式上则是不同**的。
+
+025.**直接经验**与**间接经验**是**源与流**的关系
+
 ### 第二章 实践与认识及其发展规律
 
 23.马克思主义理论**区别于其他理论的根本特征**是：**实践性**
@@ -60,7 +167,7 @@
 
 27.价值评价有科学和非科学之分**，评价结果有正确与错误之分**。
 
-28.真理是一个发展过程，**既是绝对的，又是相对的**，这是真理问题上的辩证法
+28.真理是一个发展过程，**既是绝对的，又是相对的**，这是真理问题上的辩证法（所以不能说真理从相对到绝对）
 
 29.真理是**具体的**，任何真理都是在一定范围内、条件下才成立。
 
@@ -70,4 +177,293 @@
 
 32.**真理是一元的**，**真理本身没有主体的差别**，而**价值是多元的**，**不同的主体有不同的需要**，不同的价值要求和价值选择。
 
+**客体能否满足主体的需要**，并**不由人的主观愿望决定**，而是由**客体客观存在的性质、属性等决定**。
+
+33.**实践**是人的认识产生和发展的基础，也是**真理与价值统一的基础**。
+
+026.一种活动能否被称为**实践活动**，关键看它是否：
+
+* ①超出了纯粹的意识活动（注意，**认识活动**也**以客观世界作为客体**，也**具有目的性**）
+* ②改变了除实践主体的意识状态之外的其他存在物的状态
+
+027.**未知世界**和**已知世界**都是**客观存在**，不存在**派生**关系。
+
+028.实践是认识发展的**动力**，也表现在实践**为认识的发展提供了手段和条件**，如经验资料、实验仪器和工具等。
+
+029.人的认识能力、思维能力是**无限性与有限性**、**绝对性与相对性的统一**。
+
+030.实践中介是指**各种形式的工具、手段**以及**运用、操作这些工具、手段的程序和方法**。
+
+031.实践的中介系统可分为两个子系统：一是作为人的肢体延长、感官延伸、体能放大的物质性工具系统，如各种机器系统和动力能源系统。二是语言符号工具系统。正是依靠这些中介系统，实践的主体和客体才能够相互作用。**实践中介不属于实践主体的一部分**。
+
+032.人的认识（能动反映）是**反映性（摹写性）**与**创造性**的统一。
+
+033.**旧唯物主义认识论**的**缺陷**：
+
+* 不了解实践对认识的决定作用
+* 最根本的是它看不到**主观和客观之间的矛盾及其相互作用**，没有把认识看作一个不断发展的过程。
+
+034.马克思主义认识论揭示的认识的辩证过程：
+
+* ①从感性认识到理性认识，再从理性认识到实践
+* ②实践、认识、再实践、再认识的循环往复和无限发展（注意用词，**循环**往复是对的）
+* ③人对事物的认识经历着从（感性）具体到抽象和从抽象到（理性）具体的过程。
+
+035.一个人的**多数知识**还是来自**间接经验**。
+
+036.**自然规律起作用的条件是可以通过实践改变的**（但是自然规律本身不能被改造）
+
+037.任何成功的实践都是**真理尺度**和**价值尺度的统一**，是**合规律性**和**合目的性的**统一。
+
+038.**物质生产实践**是**人类最基本的实践活动**。
+
+039.既不能因为真理的客观性而把真理等同于**客观实在**，也不能因为真理具有主观形式而把真理误认为**主观产物**
+
+下列关于真理的描述：
+
+* 真理是人的意识与客观事物相符合（唯物主义观点√）
+* 真理是观念和主体感觉的复合（唯心主义观点×）
+* 真理是思维同它的先验形式的一致（唯心主义观点×）
+* 真理是观念和行为对人有用的效果（唯心主义观点×）
+
+040.真理的**绝对性**和**相对性**是**同一客观真理的两种属性**
+
+041.同一真理可以采取不同的语言形式、不同的理论形式来表述，但它们在内容上都是对同一事物的本质和规律的反映
+
+042.价值具有的基本特性：①客观性 ②主体性 ③社会历史性 
+
+043.无论是**自然地理环境**还是**人口因素**，都不能脱离**社会生产**而发生作用，都不能决定社会的性质和社会形态的更替。
+
+044.真理与价值在实践中是辩证统一的：
+
+* 任何实践活动都是在**真理尺度**和**价值尺度**共同制约下进行的
+* 价值尺度必须以真理为前提
+* 脱离了价值尺度，真理就缺失了主体意义
+* 真理尺度与价值尺度的统一是**具体的**和**历史的**
+
+045.**知识性认识**以客观事物及其规律为对象，以客体本身的属性、关系和发展过程为反映内容，追求客体“是什么”，以追求**“真”**为**认识目的**；
+
+046.**价值评价**以主客体之间的价值关系为认识对象，主体的意向、愿望和要求包含在其中，追求“应该怎样”，以求**“善”和“美”**为**认识目的**；由于是主体以自身需求作为内在尺度运用于所评价的客体，因此，评价的差异性无法避免。
+
+047.价值评价结果**有正确与错误之分**，价值评价也有**科学与非科学之别**。
+
+048.价值评价要**以真理为根据**，要**有利于人类主体的生存和发展**。
+
+049.必然既是**自由的根据**，也是**自由的限度**。
+
+050.**人不能摆脱必然性的制约**，只有在认识必然性的基础上才有自由的活动，这就是人的自由限度，也是自由和必然的辩证规律。
+
+* 自由是人在活动中通过认识和利用必然所表现出的一种**自觉自主的状态**
+
+* 必然与自由的关系贯穿于人类存在和发展的始终，并成为人类存在和发展的永恒矛盾
+
+* **认识必然和争取自由**，是人类认识世界和改造世界的**根本目标**
+
 ### 第三章 人类社会及其发展规律
+
+34.**社会意识具有相对独立性**（指A决定B，但B又有自己特有的发展形式和规律）
+
+35.**物质资料的生产方式**构成了人类社会存在和发展的基础，**集中体现**着人类社会的**物质性**。
+
+36.**生产关系**不是人与人之间的一般的社会关系，而是**人与人之间的经济关系**，即**物质利益关系**。
+
+37.由社会一定发展阶段的生产力所决定的**生产关系的总和就是经济基础**。
+
+38.上层建筑中，**政治上层**建筑居于**主导地位**，政治上层建筑的**核心是国家政权**。
+
+39.**社会的发展和进步**集中表现为**社会形态的更替**。
+
+社会形态更替归根结底是社会基本矛盾运动的结果，其中具有最终决定意义的是**生产力的发展**。
+
+**人民群众**是社会形态更替的**决定性力量**。
+
+40.**人的发展**指人的体力、智力、个性和交往能力等的发展，其中最根本的是：**人的自由程度的提高**
+
+41.历史唯物主义的**社会形态范畴**是指：同生产力发展的一定阶段相适应**的经济基础与上层建筑的统一**
+
+**生产力**和**生产关系**的统一体是**生产方式**
+
+42.社会形态更替的**多样性**：比如资本主义可以从封建制度“衰亡”中产生，也可以从奴隶制“解体”中产生，或者从原始公有制“崩溃”中产生。
+
+社会形态更替的**曲折性**：指社会前进过程中所出现的反复、停滞和倒退现象。
+
+43.**风俗习惯**属于**社会意识**的范畴，它是社会存在的反映。
+
+44.任何历史人物的出现都体现了**必然性和偶然性的统一**。
+
+### 第四章 资本主义的本质及规律
+
+45.价值是交换价值的基础，**使用价值是交换价值的物质承担者**。
+
+46.**劳动**是**使用价值**的源泉之一。
+
+47.不论财富的社会形式如何，**使用价值**总是**构成财富的物质的内容**。
+
+48.**商品一定是劳动产品**。
+
+49.**具体劳动**创造商品的**使用价值**，**转移生产资料的价值**，**抽象劳动**形成商品的**价值**。
+
+50.**商品价值**以**使用价值**为前提，反之不成立。
+
+51.商品的价值在质上是一样的，使用价值则不一样。
+
+52.使用价值不是历史范畴，而是永恒的范畴。价值是历史范畴
+
+53.**使用价值**是指商品能满足人的某种需要的有用性，反映的是人与自然之间的物质关系，是商品的**自然属性**。
+
+价值是商品特有的**社会属性**。
+
+54.**劳动力自身的价值**不是由具体劳动转移的，也不是由具体劳动创造的，而是**由抽象劳动新创造**的。
+
+55.**劳动的二重性**（具体劳动和抽象劳动）决定了**商品的二因素**（使用价值和价值）
+
+56.具体劳动和抽象劳动是对立统一关系，二者的区别体现在**具体劳动反映人与自然的关系**，是劳动的自然属性，而**抽象劳动所反映的是商品生产者的社会关系**，是劳动的社会属性。
+
+57.**空间上并存，时间上继起**是产业资本运动必须具备的两个基本前提条件。
+
+58.解决私人劳动和社会劳动之间矛盾的唯一途径是**商品交换**。
+
+59.**劳动生产率**是指劳动者**生产使用价值的效率**
+
+60.价格是**价值的货币表现**（价格会反映价值）
+
+61.价格围绕商品的价值**自发波动**（自发没问题）
+
+62.资本在运动过程中，采取**货币、生产资料、商品**等物质形态。
+
+63.**货币**是在长期交换过程中形成的**固定充当一般等价物的商品**。
+
+64.商品的价值和使用价值的矛盾、生产商品的具体劳动和抽象劳动的矛盾，**根源于私人劳动和社会劳动的矛盾**。
+
+65.私有制商品经济条件下，私人劳动和社会劳动之间的矛盾是**<u>商品经济</u>的基本矛盾**，在资本主义制度下，这种矛盾进一步发展成**<u>资本主义</u>的基本矛盾**，即**生产社会化和生产资料资本主义私人占有之间的矛盾**。
+
+66.生产物质资料的劳动过程中包括三个基本要素，即**劳动者的劳动、劳动对象和劳动资料**。虽然**劳动不是使用价值的唯一源泉**，但是**劳动是价值的唯一源泉**。要素价值论混淆了价值形成的原因和价值形成的条件之间的关系。
+
+67.充当贮藏手段的货币**必须是足值的金属货币**。
+
+68.货币执行**价值尺度**职能：以货币作为尺度来衡量和表现一切商品价值的职能，如合同约定房价30万元。
+
+货币执行**支付手段**职能：即指货币在清偿债务或延期支付时执行的职能，如缴纳房屋契税9000元、按房屋合同约定第二年付款10万元。
+
+货币执行**流通手段**职能：一手交钱、一手交货就是流通手段，如在装饰材料市场现购材料5万元；二者分离就是支付手段。
+
+69.**劳动力**是指人的劳动能力，是人的脑力和体力的总和，**劳动力的使用即劳动**。
+
+70.资本主义生产过程中的主要方面是**价值的增殖过程（剩余价值的生产过程）**。
+
+71.
+
+| **具体劳动** | ①形成（创造）商品的使用价值 | ②转移生产资料的价值到新产品中去             |
+| ------------ | --------------------------- | ------------------------------------------- |
+| **抽象劳动** | **①形成（创造）商品的价值** | **②把劳动力商品的价值再生产（再创造出来）** |
+
+72.劳动力商品价值的决定的一个重要特点是：**劳动力价值的构成包含历史和道德的因素**。
+
+**劳动力价值的最低界限是由生活上不可缺少的生活资料的价值决定**的。
+
+73.马克思经济学说的核心内容和基石是：**剩余价值理论**
+
+74.在**价值增殖过程中**，雇佣工人的**劳动时间分为两部分**：一部分是必要劳动时间，用于再生产劳动力的价值；另一部分是剩余劳动实践，用于无偿地为资本家生产剩余价值。
+
+**雇佣工人劳动超过了用于再生产自己劳动力价值的时间（必要劳动时间）这个一定点的时间，都是生产剩余价值的时间（剩余劳动时间）**
+
+75.根据**资本在剩余价值生产中所起的不同作用**，可以将资本划分为**不变资本**与**可变资本**。（“变”指资本价值是否增殖）
+
+二者之间的比例称为资本的**价值构成**
+
+根据**周转方式或价值转移方式的不同**，可将资本划分为**固定资本**与**流动资本**。
+
+**产业资本在它的循环过程**中，采取了三种不同的职能形式：**货币资本、生产资本和商品资本**。
+
+76.**超额剩余价值**：企业由于**提高劳动生产率而使商品的个别价值低于社会价值的差额**。
+
+77.资本家追求超额剩余价值，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
+
+78.**资本积累**是指**剩余价值资本化**，**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**。
+
+79.**资本积累的源泉**是工人创造的**剩余价值**，**资本积累**又是**资本主义扩大再生产的源泉**
+
+80.剩余价值率$m'=m/v=剩余价值/可变资本=剩余劳动/必要劳动=剩余劳动时间/必要劳动时间$
+
+81.**资本集中最强有力的杠杆**是**竞争和信用**
+
+82.**资本主义简单再生产**的**实质**是**物质资料再生产**与**资本主义生产关系再生产的统一**
+
+83**.社会再生产**的核心问题是**社会总产品的实现问题**，即**社会总产品的价值补偿和实物补偿问题**
+
+84.**平均利润**的出现是**不同部门之间竞争的结果**（资本必然从利润率低的部门转到利润率高的部门，导致利润平均化）
+
+85.资本主义**工资的本质**是：**劳动力的价值或价格**
+
+86.资本家购买工人的劳动力是以货币工资形式支付的，**工资表现为“劳动的价格”**或**工人全部劳动的报酬**，这就模糊了工人必要劳动和剩余劳动的界限，掩盖了资本主义的剥削关系。
+
+87.**经济危机抽象的一般的可能性**首先是由**货币作为流通手段和支付手段引起**的。
+
+88.**资本主义经济危机的本质特征**：**生产相对过剩**
+
+89.资本主义**经济危机具有周期性**，这是由**资本主义矛盾运动的阶段性决定**的。
+
+资本主义经济危机周期性爆发的特点，使社会资本再生产也呈现出周期性的特点。
+
+90.**资本主义国家**的**对内职能**，主要是**政治统治的职能**；
+
+91.国家的社会管理职能与政治统治职能是紧密联系的，从根本上说国家的**社会管理职能**是**服务于**其**政治统治职能**的。
+
+92.资本主义国家的**对外职能**是**国家对内政治统治职能的延伸**。
+
+### 第五章 资本主义的发展及其趋势
+
+93.在经济生活中起决定性作用的是——**垄断组织**
+
+94.**金融资本**：由工业垄断资本和银行垄断资本融合在一起而形成的一种垄断资本。
+
+95.金融资本的形成主要通过：**金融联系**、**资本参与**和**人事参与**
+
+96.金融寡头再经济领域中的统治主要是通过**“参与制”**实现的，所谓“参与制”，即**金融寡头通过掌握一定数量的股票来层层控制企业的制度**。
+
+97.获得**垄断利润**是垄断资本的**实质**，获得**垄断地位、垄断统治**是前者的**条件**，获得**垄断价格**是前者的**主要方式**。
+
+98.国家垄断资本的**实质**是私人垄断资本利用国家机器来为其发展服务的手段
+
+99.**早期国际垄断同盟**的主要形式是**国际卡特尔、国际托拉斯、国际康采恩**；
+
+100.**当代国际垄断同盟**的主要形式是**国家垄断资本主义的国际联盟**
+
+101.**当代资本主义**最突出、最鲜明、**最主要的特征**是**国际金融资本的垄断**
+
+### 第六章 社会主义的发展及其规律
+
+102.空想社会主义的**开山之作**——1516年托马斯·莫尔的《**乌托邦**》，受其影响，1602年，康帕内拉写出了《**太阳城**》
+
+二者都是16-17世纪早期空想社会主义的代表人物。
+
+103.18世纪空想平均共产主义的代表人物摩莱里和马布利分别在《**自然法典**》和《**论法制或法律的原则**》中，论述了从私有制过渡到公有制的必然性，并以法律条文形式阐述了理想社会的纲领和原则。
+
+104.社会主义发展史：
+
+| 第一次历史性飞跃     | 9世纪中叶社会主义从空想发展到科学              |
+| -------------------- | ---------------------------------------------- |
+| **第二次历史性飞跃** | **社会主义从理论发展到建立社会主义制度的实践** |
+| 又一次历史性飞跃     | 从一国实践发展到多国实践                       |
+| 向深度发展           | 20世纪70年代末开始的社会主义改革               |
+
+105.19世纪初期代表人物，圣西门、傅立叶、欧文的**批判的空想社会主义**，成为**科学社会主义的直接思想来源**；
+
+106.19世纪的三大先进思潮（德国古典哲学、英国古典政治经济学、英法空想社会主义）为马克思主义的创立提供了**直接的理论来源**。19世纪的三大科学发现（细胞学说、能量守恒与转化定律、生物进化论）为马克思主义的产生提供了**自然科学前提**
+
+107.科学社会主义的**核心命题**：资本主义必然灭亡，社会主义必将胜利。
+
+108.造成社会主义发展道路多样性的原因：**时代和实践的不断发展**
+
+### 第七章 共产主义崇高理想及其最终实现
+
+109.马克思主义与空想社会主义在展望未来社会的问题上的**根本区别**在于：**是否坚持科学的立场观点方法**
+
+110.共产主义社会的特征
+
+| 实现人的自由而全面的发展（根本特征） |
+| ------------------------------------ |
+| 物质财富极大丰富，消费资料按需分配   |
+| 社会关系高度和谐                     |
+| 人们的精神境界极大提高               |
+
