--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -291,11 +291,66 @@
 
 44.任何历史人物的出现都体现了**必然性和偶然性的统一**。
 
+051.**劳动者**是生产力中最活跃的因素，人类智慧和能力的发展决定着对物质资源开发的深度和广度。
+
+052.**生产方式**是社会历史发展的决定力量
+
+053.**科学技术**日益成为生产发展的**决定性因素**
+
+054.**生产力**是社会进步的根本内容，是**衡量社会进步的根本尺度**。
+
+055.**经济基础的性质**由**占支配地位的生产关系的性质**决定（不是由国家性质决定）
+
+056.
+
+| 上层建筑                         |                  |      |  |              |      | |
+| -------------------------------- | ---------------- | ---- | ---- | ---- | ---- | -------------------------------- |
+| **观念上层建筑**（社会意识形态） | 宗教   | 道德 | 艺术 | 政治法律思想 | 哲学 | ... |
+| **政治上层建筑**（主导地位）     | 政治法律制度→  | 国家政治制度 | 立法司法制度 | 行政制度 |...| ... |
+|                                  | 政治组织及设施→ | 国家政权机构（核心） | 政党 | 军队 | 法庭 | 监狱 |
+
+057.国家是：
+
+* ①一个历史范畴（不是从来就有的）
+* ②阶级矛盾不可调和的产物
+* ③一个阶级统治另一个阶级的工具
+* ④政治上层建筑的核心
+
+058.**经济基础**的变更**必然引起上层建筑的变革**。
+
+059.上层建筑一定要适应经济基础状况
+
+060.上层建筑反作用的后果：
+
+* ①当它为**适合生产力发展要求的经济基础服务**时，就成为**推动社会发展的进步力量**；
+* ②当它为**落后的经济基础服务**时，就成为**阻碍社会发展的消极力量**。
+
+061.世界历史的形成与发展：
+
+* ①**生产方式的发展变革**是**世界历史形成和发展的基础**
+* ②**普遍交往**是**世界历史的基本特征**。
+* ③**世界历史的形成与发展**为**共产主义提供了条件和路径**
+* ④**要站在世界历史的高度审视当今世界发展趋势和面临的重大问题**，推动构建人类命运共同体。
+
+062.**人的发展层次**从低级到高级依次概括为：
+
+* ①**人的依赖关系占统治地位**的阶段（资本主义以前的社会）
+* ②**以物的依赖关系为基础的**人的独立性的阶段（资本主义社会）
+* ③**自由个性的阶段**（共产主义社会）
+
+063.**经济条件**对于人民群众创造历史的活动有着首要的、决定性的影响。
+
+064.生产关系的变革，社会制度的更替，最终取决于生产力的发展，但**不会随着生产力的发展自发地实现和完成，而必须借助人民群众的力量**。
+
+065.**人的本质不是单个人天生就具有的东西，也不是从所有的个体的人身上抽象出来的共同性**，在其现实性上，它是一切社会关系的总和。 
+
 ### 第四章 资本主义的本质及规律
 
-45.价值是交换价值的基础，**使用价值是交换价值的物质承担者**。
+45.价值是交换价值的基础，**使用价值是交换价值的物质承担者**，**交换价值**是**价值**的**表现形式**。
 
-46.**劳动**是**使用价值**的源泉之一。
+46.**劳动**是**使用价值**的源泉之一，劳动是**财富**的源泉之一（财富或者使用价值的生产，除了劳动外还要劳动对象和劳动资料）。
+
+**价值**的**源泉**：劳动力商品的使用价值、雇佣工人的劳动（注意，流动资本不算，因为其中有可能有生产资料，如原材料）
 
 47.不论财富的社会形式如何，**使用价值**总是**构成财富的物质的内容**。
 
@@ -357,6 +412,8 @@
 | ------------ | --------------------------- | ------------------------------------------- |
 | **抽象劳动** | **①形成（创造）商品的价值** | **②把劳动力商品的价值再生产（再创造出来）** |
 
+强调★：劳动力自身价值不是转移到商品中去，而是**再生产**出来
+
 72.劳动力商品价值的决定的一个重要特点是：**劳动力价值的构成包含历史和道德的因素**。
 
 **劳动力价值的最低界限是由生活上不可缺少的生活资料的价值决定**的。
@@ -379,7 +436,7 @@
 
 77.资本家追求超额剩余价值，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
 
-78.**资本积累**是指**剩余价值资本化**，**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**。
+78.**资本积累**是指**剩余价值资本化**，**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**。是资本主义社会**失业的根源**。
 
 79.**资本积累的源泉**是工人创造的**剩余价值**，**资本积累**又是**资本主义扩大再生产的源泉**
 
@@ -411,6 +468,89 @@
 
 92.资本主义国家的**对外职能**是**国家对内政治统治职能的延伸**。
 
+066.**商品价值量**与**劳动生产率**之间的基本关系：
+
+| 劳动生产率↗     | 单位劳动时间内生产的商品数量 | 单位商品中所耗费的劳动时间 | 单位劳动时间内生产的价值总量 |
+| --------------- | ---------------------------- | -------------------------- | ---------------------------- |
+|                 | ↗                            | ↘                          | —                            |
+| **劳动生产率↗** | **商品的使用价值**           | **单位商品的价值量**       |                              |
+|                 | ↗                            | ↘                          |                              |
+
+067.**价值规律**：
+
+* 既支配商品生产，又支配商品流通
+* 不是**资本主义社会特有的经济规律**
+* 起作用的形式在一定条件下可以发生变化
+* 是在市场配置资源的过程中体现它的客观要求和作用的
+
+068.**价值规律的作用**表现在：
+
+* ①自发地调节生产资料和劳动力在社会各部生产部门之间的分配比例
+* ②自发地刺激社会生产力的发展
+* ③自发地调节社会收入的分配
+
+069.在马克思之前，古典政治经济学代表人物亚当·斯密已经认识到了**商品的二因素**，提出了**劳动创造价值的观点**。
+
+070.**资本主义生产过程**是：①劳动过程	②价值增殖过程
+
+071.**资本主义简单再生产的实质**：①物质资料再生产	②资本主义生产关系再生产
+
+072.**不变资本**指的是：
+
+* ①不改变自己的价值量
+* ②不发生增殖
+* （有些会转变自己的物质形态，比如面粉变成包子；有些会一次性转移其全部价值，有些不会，比如机器）
+
+073.率先提高劳动生产率的企业
+
+* 其个别劳动时间少于社会必要劳动时间
+* 生产商品的**个别价值低于社会价值**
+* 可以获得超额剩余价值
+
+074.**马克思劳动价值论**，通过对私有制商品经济条件下生产商品的劳动所特有的社会性质及其表现形式的分析，揭示了商品经济的内在矛盾及其运动规律，**揭露和批判了商品拜物教观念**。
+
+075.**资本积累规模的大小**取决于：
+
+* ①资本家对工人的剥削程度
+* ②劳动生产率的高低
+* ③所用资本和所费资本之间的差额
+* ④**资本家预付资本的大小**（易漏选）
+
+076.**资本周转快慢**的因素有许多，关键因素有：
+
+* ①资本周转的时间
+
+* ②生产资本的固定资本和流动资本的构成
+
+077.由生产的技术水平所决定的生产资料和劳动力之间的比例，叫作资本的**技术构成**。
+
+078.在资本主义生产过程中资本**有机构成的提高**是一般趋势。
+
+079.社会再生产的顺利进行，要求：
+
+* ①生产中所耗费的资本在价值上得到补偿
+* ②实际生产过程中所耗费的生产资料和消费资料得到事物的替换
+* ③连打部类内部各个产业部门之间保持一定的比例关系
+* ④两大部类之间保持一定的比例关系
+
+080.利润率是剩余价值与全部预付资本之比$[m/(c+v)]$，剩余价值率是剩余价值与可变资本之比$(m/v)$。因为全部预付资本总是大于可变资本，使得**利润率总是小于剩余价值率**。
+
+081.平均利润形成后：
+
+* 利润转化为平均利润，**商品价值也就转化为生产价格**
+* **价值规律的实现形式发生了变化**（从个别部门看，资本家获得的平均利润与本部门工人所创造的剩余价值可能不一致，但从全社会来看，整个资本家阶级获得的利润总额与雇佣工人所创造的剩余价值总额是相等的）
+
+082.劳动二重性理论是“**理解政治经济学的枢纽**”
+
+083.**资本主义宪法所依据的基本原则**有：
+
+* ①私有制原则
+* ②主权在民原则
+* ③分权制衡原则
+* ④人权原则
+
+084.资本主义意识形态是资本主义社会的**观念上层建筑**，是**为资本主义的经济基础和资本主义国家的政治上层建筑服务**的。资本主义意识形态是**资产阶级**的阶级意识的集中体现，它把资产阶级的阶级意识内化为本阶级成员的基本信念。
+
 ### 第五章 资本主义的发展及其趋势
 
 93.在经济生活中起决定性作用的是——**垄断组织**
@@ -420,6 +560,8 @@
 95.金融资本的形成主要通过：**金融联系**、**资本参与**和**人事参与**
 
 96.金融寡头再经济领域中的统治主要是通过**“参与制”**实现的，所谓“参与制”，即**金融寡头通过掌握一定数量的股票来层层控制企业的制度**。
+
+通过建立政策咨询机构等方式**对政府的政策施加影响**，体现了**金融寡头**对垄断资本主义国家的控制和影响。
 
 97.获得**垄断利润**是垄断资本的**实质**，获得**垄断地位、垄断统治**是前者的**条件**，获得**垄断价格**是前者的**主要方式**。
 
@@ -431,6 +573,121 @@
 
 101.**当代资本主义**最突出、最鲜明、**最主要的特征**是**国际金融资本的垄断**
 
+085.关于**生产集中和资本集中**及其后果：
+
+* 生产集中和资本集中是资本家追求剩余价值的结果
+* 生产集中和资本集中发展到一定阶段**必然**引起垄断
+* 自由竞争引起生产集中和资本集中
+
+086.**最简单，最初级的垄断组织形式**是**短期价格协定**
+
+087.**自由竞争**的目的是**获得更多利润或超额利润，不断扩大资本的积累**
+
+088.垄断是在自由竞争中形成的，是作为自由竞争的对立面产生的。同自由竞争相比，具有新特点包括：
+
+* 除了采取各种形式的经济手段外，还采取非经济手段
+* 不仅在国内市场上进行竞争，国际市场上的竞争也越来越激烈
+* 不仅经济领域的竞争多种多样，而且还扩大到经济领域以外
+
+089.**金融资本**形成的**主要途径**包括：
+
+* ①金融联系
+* ②资本参与
+* ③人事参与
+
+090.垄断组织**操纵价格带来的结果**是：
+
+* ①**抑制**了市场上**价格的自由波动**
+* ②**垄断价格**一定时期内**背离生产价格和价值**
+* ③对**商品价值和剩余价值作了有利于垄断资本的再分配**
+
+091.**垄断高价**和**垄断低价**都是垄断组织通过强行规定获取的垄断利润，不存在**数额相等**的问题。
+
+092.**垄断价格**的产生**没有否定价值规律**，这是因为，从全社会看：
+
+* ①整个社会商品的价值仍然是由生产它们的社会必要劳动实践决定的
+* ②垄断价格既不能增加，也不能减少整个社会所生产的价值总量
+* ③商品的价格总额仍然等于商品的价值总额
+
+093.国家宏观调节的手段：
+
+* 国家运用财政政策、货币政策等经济手段，对社会总供给和总需求进行调节。
+
+094.垄断资本向**世界范围扩展**的**基本形式**有：
+
+* ①**借贷**资本输出
+* ②**生产**资本输出
+* ③**商品**资本输出
+
+095.从输出资本的**主体**上看，主要有两种：
+
+* ①私人资本输出
+* ②国家资本输出
+
+096.垄断资本向世界范围扩展的主要经济动因是：
+
+* ①将国内过剩的资本输出，以便在国外谋求高额利润
+* ②将部分非要害技术转移到国外，以取得在别国的垄断优势
+* ③争夺商品的销售市场
+* ④确保原材料和能源的可靠来源
+
+097.**国际金融危机不是经济全球化的必然产物**，而是金融资本过度逐利、金融监管严重缺失的结果。
+
+098.国家资本所有制：
+
+* ①主要存在于基础设施和公共事业部门
+* ②对整个社会经济的发展有着重要的影响
+* ③**体现着总资本家剥削雇佣劳动者的关系**
+
+099.**法人资本所有制**成为居于**主导地位**的资本所有制形式。
+
+0100.资本主义国家没有也不可能建立**职工选举管理者制度**。
+
+0101.西方国家普遍走上强化市场调节、弱化政府干预的道路，即：
+
+* ①通过国有企业私有化来提升经济竞争力
+* ②通过福利制度改革，减少政府的财政负担
+* ③通过放松对经济和金融的管制，释放经济活力
+
+0102.资本主义国家**政治制度的变化**：
+
+* ①政治制度出现多元化的趋势，公民权利有所扩大
+* ②普遍加强了法治建设，以便协调社会各阶级、阶乘的利益
+* ③改良主义政党在政治舞台上的影响日益扩大
+
+0103.从第二次世界大战后资本主义发展的实际情况看：
+
+* ①资本主义生产关系的根本性质没有改变
+* ②资本追逐剩余价值的本性没有改变
+* ③导致财富占用两极分化的制度基础没有改变
+* ④**改变**的是**获取剩余价值的方式和方法**（比如无人车间、自动化等等）
+
+0104.资本主义变化的新特征
+
+* ①科技创新加速资本主义生产方式变化。
+  * a.产业结构调整。一般制造业↘，高新技术产业和金融业↗
+  * b.生产组织和劳动形式的变化。数据成为一种新的生产要素，数字劳动地位日益凸显。
+  * c.新经济形态的出现。数字经济、智能经济、共享经济等等
+* ②国际金融垄断资本主义影响日益显现
+* ③社会阶级层级结构呈现复杂性、多样化
+* ④发达资本主义国家凭借经济、科技、文化传播等超级优势，在世界范围内推行
+
+0105.资本主义国家内部的矛盾和冲突日益明显：
+
+* ①**经济发展失调**
+  * a.虚拟经济与实体经济发展失衡
+  * b.福利风险增加
+  * c.债务负担沉重，巨额政府债务又埋下了新一轮金融危机的隐患
+* ②**政治体制失灵**
+  * a.西式选举往往难以举贤
+  * b.政党利益可能凌驾于国家利益之上
+  * c.“民主陷阱”会阻碍国家治理
+  * d.传统精英政治走向衰弱，大众政治与精英政治的对立日趋严重，民粹主义思潮泛起，西方精英政治陷入困境
+* ③**社会融合机制失效**
+  * a.社会极端思潮抬头
+  * b.社会流动性退化（常考，注意是社会融合机制）
+  * c.社会矛盾激化
+
 ### 第六章 社会主义的发展及其规律
 
 102.空想社会主义的**开山之作**——1516年托马斯·莫尔的《**乌托邦**》，受其影响，1602年，康帕内拉写出了《**太阳城**》
@@ -441,7 +698,7 @@
 
 104.社会主义发展史：
 
-| 第一次历史性飞跃     | 9世纪中叶社会主义从空想发展到科学              |
+| 第一次历史性飞跃     | 19世纪中叶社会主义从空想发展到科学             |
 | -------------------- | ---------------------------------------------- |
 | **第二次历史性飞跃** | **社会主义从理论发展到建立社会主义制度的实践** |
 | 又一次历史性飞跃     | 从一国实践发展到多国实践                       |
@@ -455,6 +712,61 @@
 
 108.造成社会主义发展道路多样性的原因：**时代和实践的不断发展**
 
+0106.社会主义从空想发展到科学，是因为马克思、恩格斯在新的历史条件下创立了：
+
+* ①**唯物史观**
+* ②**剩余价值学说**
+
+0107.空想社会主义“没有能欧指出真正的出路。它既**不会阐明资本主义制度下雇佣奴隶制的本质**，又不会发现资本主义发展的规律，也不会找到能够成为新社会的创造者的社会力量。
+
+0108.巴黎公社革命：
+
+* ①是第一国际精神的产儿
+* ②是无产阶级夺取政权的第一次伟大尝试
+
+0109.十月革命的胜利：
+
+* 实现了社会主义从理想到现实的伟大飞跃
+* 开辟了人类历史的新纪元
+* 苏维埃俄国成为世界上第一个社会主义国家
+
+0110.列宁提出：“**社会主义革命可以首先在一个或者几个国家获得胜利**。”
+
+0111.第一国际：
+
+* 大力支援各国的工人运动，支持反封建的民主运动和民族解放运动
+* 促进了马克思主义的传播及其与工人运动的结合
+* 初步确立了马克思主义在工人运动中的指导地位
+
+0112.1871年爆发的巴黎公社革命，是第一国际的产儿，并不是第一国际发动的，跟不上第一国际领导的。巴黎公社革命是在发过同普鲁士之间发生战争、民族矛盾和阶级斗争激化的情况下爆发的。
+
+0113.巴黎公社采取的用以防止国家机关工作人员由社会公仆变为社会主任的重要措施：
+
+* ①规定所有公职人员无论职位高低，实行全面的选举制和撤换制。
+* ②取消高薪资，规定任何工作人员年薪不得超过熟练工人的工薪水平。
+
+0114.战时共产主义政策**主要特征**：
+
+* ①实行余粮收集制
+* ②取消商品货币关系
+
+0115.实行新经济政策，是因为：
+
+* ①国家从战争转入和平经济建设时期，战时共产主义政策无法调动生产者尤其是农民的积极性
+* ②国民经济已经濒临崩溃，国内发生严重的经济和政治危机
+* ③如不改变政策，执政党将会失去广大群众，丢掉阶级基础。
+
+0116.新经济政策的**主要内容**：
+
+1. 用粮食税制取代余粮收集制
+2. 允许私人自由贸易，恢复商品货币关系
+3. 允许私人小工业企业发展
+4. 采取一些国家资本主义的形式来发展生产
+
+0117.苏联的**农业合作化**是在20世纪30年代前中期完成的，**苏联模式**也是在这个时期形成的（列宁逝世后），不在新经济政策时期。
+
+0118.**社会主义发展道路的多样性**中，“各国人口因素和自然地理环境的不同是造就社会主义发展道路多样性的决定因素”属于**人口和地理决定论**的观点，是错误的。（注意决定、根本、基本等字眼）
+
 ### 第七章 共产主义崇高理想及其最终实现
 
 109.马克思主义与空想社会主义在展望未来社会的问题上的**根本区别**在于：**是否坚持科学的立场观点方法**
@@ -467,3 +779,13 @@
 | 社会关系高度和谐                     |
 | 人们的精神境界极大提高               |
 
+0119.**共产主义社会**中，人的**自由而全面的发展**指的是：
+
+1. 全体社会成员的发展，即每一个人的发展，而不是只有一部分人的发展。
+2. 人与人之间形成了事实上的平等，整个社会是和谐的（但是还是存在矛盾）
+3. 社会发展与个人发展实现了真正的统一
+4. 社会发展不再以牺牲某些个人的发展为代价。
+
+
+
+## 毛泽东思想和中国特色社会主义理论体系概论
