:pencil2:修改正文错误若干处

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -68,11 +68,11 @@
 
 04.**形而上学唯物主义物质观**的**缺陷**：
 
-①把某种特殊的物质形态误认为物质的一般
+1. 把某种特殊的物质形态误认为物质的一般
 
-②割裂了自然界与人类社会的物质统一性（不能说明社会生活的物质性）
+2. 割裂了自然界与人类社会的物质统一性（不能说明社会生活的物质性）
 
-③不了解人类对物质的认识是一个永无止境的发展过程
+3. 不了解人类对物质的认识是一个永无止境的发展过程
 
 05.马克思主义物质观所体现的唯物辩证法是指
 
@@ -91,9 +91,9 @@
 
 08.人类改造世界的实践活动，使世界发生了二重分化，即：
 
-①从自然界中分化出人类社会
+1. 从自然界中分化出人类社会
 
-②从客观世界中分化出主观世界
+2. 从客观世界中分化出主观世界
 
 09.唯物辩证法就其本质来说是批判的、革命的，因为它
 
@@ -230,7 +230,7 @@
 
 041.同一真理可以采取不同的语言形式、不同的理论形式来表述，但它们在内容上都是对同一事物的本质和规律的反映
 
-042.价值具有的基本特性：①客观性 ②主体性 ③社会历史性 
+042.**价值**具有的**基本特性**：①客观性 ②主体性 ③社会历史性 
 
 043.无论是**自然地理环境**还是**人口因素**，都不能脱离**社会生产**而发生作用，都不能决定社会的性质和社会形态的更替。
 
@@ -289,11 +289,11 @@
 
 43.**风俗习惯**属于**社会意识**的范畴，它是社会存在的反映。
 
-44.任何历史人物的出现都体现了**必然性和偶然性的统一**。
+44.任何**历史人物**的出现都体现了**必然性和偶然性的统一**。
 
 051.**劳动者**是生产力中最活跃的因素，人类智慧和能力的发展决定着对物质资源开发的深度和广度。
 
-052.**生产方式**是社会历史发展的决定力量
+052.**生产方式**是社会历史发展的**决定力量**
 
 053.**科学技术**日益成为生产发展的**决定性因素**
 
@@ -338,7 +338,7 @@
 * ②**以物的依赖关系为基础的**人的独立性的阶段（资本主义社会）
 * ③**自由个性的阶段**（共产主义社会）
 
-063.**经济条件**对于人民群众创造历史的活动有着首要的、决定性的影响。
+063.**经济条件**对于人民群众创造历史的活动有着**首要的、决定性的影响**。
 
 064.生产关系的变革，社会制度的更替，最终取决于生产力的发展，但**不会随着生产力的发展自发地实现和完成，而必须借助人民群众的力量**。
 
@@ -362,7 +362,7 @@
 
 51.商品的价值在质上是一样的，使用价值则不一样。
 
-52.使用价值不是历史范畴，而是永恒的范畴。价值是历史范畴
+52.**使用价值不是历史范畴**，而是永恒的范畴。价值是历史范畴
 
 53.**使用价值**是指商品能满足人的某种需要的有用性，反映的是人与自然之间的物质关系，是商品的**自然属性**。
 
@@ -374,7 +374,7 @@
 
 56.具体劳动和抽象劳动是对立统一关系，二者的区别体现在**具体劳动反映人与自然的关系**，是劳动的自然属性，而**抽象劳动所反映的是商品生产者的社会关系**，是劳动的社会属性。
 
-57.**空间上并存，时间上继起**是产业资本运动必须具备的两个基本前提条件。
+57.**空间上并存，时间上继起**是**产业资本运动**必须具备的两个**基本前提条件**。
 
 58.解决私人劳动和社会劳动之间矛盾的唯一途径是**商品交换**。
 
@@ -382,7 +382,7 @@
 
 60.价格是**价值的货币表现**（价格会反映价值）
 
-61.价格围绕商品的价值**自发波动**（自发没问题）
+61.价格围绕商品的价值**自发波动**（“自发”这个提法没问题）
 
 62.资本在运动过程中，采取**货币、生产资料、商品**等物质形态。
 
@@ -390,7 +390,7 @@
 
 64.商品的价值和使用价值的矛盾、生产商品的具体劳动和抽象劳动的矛盾，**根源于私人劳动和社会劳动的矛盾**。
 
-65.私有制商品经济条件下，私人劳动和社会劳动之间的矛盾是**<u>商品经济</u>的基本矛盾**，在资本主义制度下，这种矛盾进一步发展成**<u>资本主义</u>的基本矛盾**，即**生产社会化和生产资料资本主义私人占有之间的矛盾**。
+65.私有制商品经济条件下，**私人劳动和社会劳动之间的矛盾**是**<u>商品经济</u>的基本矛盾**，在资本主义制度下，这种矛盾进一步发展成**<u>资本主义</u>的基本矛盾**，即**生产社会化和生产资料资本主义私人占有之间的矛盾**。
 
 66.生产物质资料的劳动过程中包括三个基本要素，即**劳动者的劳动、劳动对象和劳动资料**。虽然**劳动不是使用价值的唯一源泉**，但是**劳动是价值的唯一源泉**。要素价值论混淆了价值形成的原因和价值形成的条件之间的关系。
 
@@ -420,7 +420,7 @@
 
 73.马克思经济学说的核心内容和基石是：**剩余价值理论**
 
-74.在**价值增殖过程中**，雇佣工人的**劳动时间分为两部分**：一部分是必要劳动时间，用于再生产劳动力的价值；另一部分是剩余劳动实践，用于无偿地为资本家生产剩余价值。
+74.在**价值增殖过程中**，雇佣工人的**劳动时间分为两部分**：一部分是**必要劳动时间**，用于再生产劳动力的价值；另一部分是**剩余劳动时间**，用于无偿地为资本家生产剩余价值。
 
 **雇佣工人劳动超过了用于再生产自己劳动力价值的时间（必要劳动时间）这个一定点的时间，都是生产剩余价值的时间（剩余劳动时间）**
 
@@ -436,11 +436,11 @@
 
 77.资本家追求超额剩余价值，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
 
-78.**资本积累**是指**剩余价值资本化**，**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**。是资本主义社会**失业的根源**。
+78.**资本积累**是指**剩余价值资本化**。**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**，是资本主义社会**失业的根源**。
 
 79.**资本积累的源泉**是工人创造的**剩余价值**，**资本积累**又是**资本主义扩大再生产的源泉**
 
-80.剩余价值率$m'=m/v=剩余价值/可变资本=剩余劳动/必要劳动=剩余劳动时间/必要劳动时间$
+80.$剩余价值率m'=m/v=剩余价值/可变资本=剩余劳动/必要劳动=剩余劳动时间/必要劳动时间$
 
 81.**资本集中最强有力的杠杆**是**竞争和信用**
 
@@ -533,14 +533,14 @@
 * ③连打部类内部各个产业部门之间保持一定的比例关系
 * ④两大部类之间保持一定的比例关系
 
-080.利润率是剩余价值与全部预付资本之比$[m/(c+v)]$，剩余价值率是剩余价值与可变资本之比$(m/v)$。因为全部预付资本总是大于可变资本，使得**利润率总是小于剩余价值率**。
+080.**利润率**是**剩余价值**与**全部预付资本**之比$[m/(c+v)]$，**剩余价值率**是**剩余价值**与**可变资本之比**$(m/v)$。因为全部预付资本总是大于可变资本，使得**利润率总是小于剩余价值率**。
 
 081.平均利润形成后：
 
 * 利润转化为平均利润，**商品价值也就转化为生产价格**
 * **价值规律的实现形式发生了变化**（从个别部门看，资本家获得的平均利润与本部门工人所创造的剩余价值可能不一致，但从全社会来看，整个资本家阶级获得的利润总额与雇佣工人所创造的剩余价值总额是相等的）
 
-082.劳动二重性理论是“**理解政治经济学的枢纽**”
+082.**劳动二重性理论**是“**理解政治经济学的枢纽**”
 
 083.**资本主义宪法所依据的基本原则**有：
 
@@ -557,11 +557,9 @@
 
 94.**金融资本**：由工业垄断资本和银行垄断资本融合在一起而形成的一种垄断资本。
 
-95.金融资本的形成主要通过：**金融联系**、**资本参与**和**人事参与**
+95.金融寡头再经济领域中的统治主要是通过**“参与制”**实现的，所谓“参与制”，即**金融寡头通过掌握一定数量的股票来层层控制企业的制度**。
 
-96.金融寡头再经济领域中的统治主要是通过**“参与制”**实现的，所谓“参与制”，即**金融寡头通过掌握一定数量的股票来层层控制企业的制度**。
-
-通过建立政策咨询机构等方式**对政府的政策施加影响**，体现了**金融寡头**对垄断资本主义国家的控制和影响。
+96.通过建立政策咨询机构等方式**对政府的政策施加影响**，体现了**金融寡头**对垄断资本主义国家的控制和影响。
 
 97.获得**垄断利润**是垄断资本的**实质**，获得**垄断地位、垄断统治**是前者的**条件**，获得**垄断价格**是前者的**主要方式**。
 
@@ -738,12 +736,12 @@
 * 促进了马克思主义的传播及其与工人运动的结合
 * 初步确立了马克思主义在工人运动中的指导地位
 
-0112.1871年爆发的巴黎公社革命，是第一国际的产儿，并不是第一国际发动的，跟不上第一国际领导的。巴黎公社革命是在发过同普鲁士之间发生战争、民族矛盾和阶级斗争激化的情况下爆发的。
+0112.1871年爆发的巴黎公社革命，是第一国际的产儿，但并不是第一国际发动的，更不是第一国际领导的。巴黎公社革命是在法国同普鲁士之间发生战争、民族矛盾和阶级斗争激化的情况下爆发的。
 
 0113.巴黎公社采取的用以防止国家机关工作人员由社会公仆变为社会主任的重要措施：
 
-* ①规定所有公职人员无论职位高低，实行全面的选举制和撤换制。
-* ②取消高薪资，规定任何工作人员年薪不得超过熟练工人的工薪水平。
+* ①规定所有公职人员无论职位高低，实行**全面的选举制和撤换制**。
+* ②**取消高薪制**，规定任何工作人员年薪不得超过熟练工人的工薪水平。
 
 0114.战时共产主义政策**主要特征**：
 
