:pencil2:内容校对+加粗了部分内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -8,23 +8,23 @@
 
 2.为创立马克思主义**奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变
 
-3.马克思恩格斯的**第一次合作**：**《神圣家族》**
+3.马克思、恩格斯的**第一次合作**：**《神圣家族》**
 
-4.**《德意志的意识形态》**首次阐述了历史唯物主义的基本观点
+4.**《德意志的意识形态》**首次阐述了**历史唯物主义**的基本观点
 
 5.**《反杜林论》**全面阐述了马克思主义理论体系，也是马克思主义的**百科全书**。
 
 6.**工人阶级的圣经**——**《资本论》**
 
-7.人民性是马克思主义的**本质属性**
+7.**人民性**是马克思主义的**本质属性**
 
-8.马克思主义的基本特征，一句话概况就是：科学性和革命性的统一
+8.马克思主义的基本特征，一句话概况就是：**科学性和革命性**的统一
 
 01.马克思主义主要由**哲学、政治经济学、科学社会主义**三大组成部分构成，来源于三大思潮最终升华的原因：
 
 | 马克思对所处时代和世界的深入观察（根本原因） | 马克思对人类社会发展规律的深刻把握（根本原因）           |
 | -------------------------------------------- | -------------------------------------------------------- |
-| 马克思拥有优良的家庭背景和教育经历           | 马克思出生和生活的德、英、法国是当时最发的的资本主义国家 |
+| 马克思拥有优良的家庭背景和教育经历           | 马克思出生和生活的德、英、法国是当时最发达的资本主义国家 |
 
 ### 第一章 世界的物质性及发展规律
 
@@ -36,7 +36,7 @@
 
 具体物质形态的时空是**有限**的，整个物质世界的时空是**无限**的。
 
-12.时间和空间是运动着的物质的**基本存在形式**。
+12.**时间和空间**是运动着的物质的**基本存在形式**。
 
 13.在自然界中一切都是自发产生的，而在人类社会中一切都打着人的**意识**的印记，是人的有目的的实践活动的结果。
 
@@ -50,9 +50,9 @@
 
 16.“喜鹊叫喜，乌鸦叫丧”否定了联系的**客观性**。
 
-17.事物发展过程中的“度”是指**保持事物的稳定性的数量界限，即事物的限度、幅度、范围（不是一个点）**。度的两端叫关节点或者临界点，超出度的范围，此物就转化为它物。
+17.事物发展过程中的“度”是指**保持事物的稳定性的数量界限，即事物的限度、幅度、范围（不是一个点）**。度的两端叫**关节点**或者**临界点**，超出度的范围，此物就转化为它物。
 
-18.底线是指度的关节点。
+18.底线是指度的**关节点**。
 
 19.摩擦生热属于**因果联系**，而电闪雷鸣不属于。
 
@@ -62,7 +62,7 @@
 
 22.人类思维从个别到一般，又由一般到隔壁的最常见的推理形式是：**归纳和演绎**
 
-02.**主观唯心主义**：我思故我在，存在就是被感知、万物皆备于我、**物是感觉的复合**、**世界是观念的集合**
+02.**主观唯心主义**：我思故我在、存在就是被感知、万物皆备于我、**物是感觉的复合**、**世界是观念的集合**
 
 03.**客观唯心主义**：世界是绝对观念的外化、世界是上帝意志的创造物
 
@@ -206,7 +206,7 @@
 034.马克思主义认识论揭示的认识的辩证过程：
 
 * ①从感性认识到理性认识，再从理性认识到实践
-* ②实践、认识、再实践、再认识的循环往复和无限发展（注意用词，**循环**往复是对的）
+* ②实践、认识、再实践、再认识的循环往复和无限发展（注意提法用词，**循环往复**是对的）
 * ③人对事物的认识经历着从（感性）具体到抽象和从抽象到（理性）具体的过程。
 
 035.一个人的**多数知识**还是来自**间接经验**。
@@ -273,7 +273,7 @@
 
 39.**社会的发展和进步**集中表现为**社会形态的更替**。
 
-社会形态更替归根结底是社会基本矛盾运动的结果，其中具有最终决定意义的是**生产力的发展**。
+社会形态更替归根结底是**社会基本矛盾运动**的结果，其中具有最终决定意义的是**生产力的发展**。
 
 **人民群众**是社会形态更替的**决定性力量**。
 
@@ -291,7 +291,7 @@
 
 44.任何**历史人物**的出现都体现了**必然性和偶然性的统一**。
 
-051.**劳动者**是生产力中最活跃的因素，人类智慧和能力的发展决定着对物质资源开发的深度和广度。
+051.**劳动者**是生产力中**最活跃的因素**，人类智慧和能力的发展决定着对物质资源开发的深度和广度。
 
 052.**生产方式**是社会历史发展的**决定力量**
 
@@ -303,7 +303,7 @@
 
 056.
 
-| 上层建筑                         |                  |      |  |              |      | |
+| 上层建筑↓                        |                  |      |  |              |      | |
 | -------------------------------- | ---------------- | ---- | ---- | ---- | ---- | -------------------------------- |
 | **观念上层建筑**（社会意识形态） | 宗教   | 道德 | 艺术 | 政治法律思想 | 哲学 | ... |
 | **政治上层建筑**（主导地位）     | 政治法律制度→  | 国家政治制度 | 立法司法制度 | 行政制度 |...| ... |
@@ -348,7 +348,7 @@
 
 45.价值是交换价值的基础，**使用价值是交换价值的物质承担者**，**交换价值**是**价值**的**表现形式**。
 
-46.**劳动**是**使用价值**的源泉之一，劳动是**财富**的源泉之一（财富或者使用价值的生产，除了劳动外还要劳动对象和劳动资料）。
+46.**劳动**是**使用价值**的源泉之一，劳动是**财富**的源泉之一（财富或者使用价值的生产，除了劳动外还要**劳动对象**和**劳动资料**）。
 
 **价值**的**源泉**：劳动力商品的使用价值、雇佣工人的劳动（注意，流动资本不算，因为其中有可能有生产资料，如原材料）
 
@@ -394,7 +394,7 @@
 
 66.生产物质资料的劳动过程中包括三个基本要素，即**劳动者的劳动、劳动对象和劳动资料**。虽然**劳动不是使用价值的唯一源泉**，但是**劳动是价值的唯一源泉**。要素价值论混淆了价值形成的原因和价值形成的条件之间的关系。
 
-67.充当贮藏手段的货币**必须是足值的金属货币**。
+67.充当**贮藏手段**的货币**必须是足值的金属货币**。
 
 68.货币执行**价值尺度**职能：以货币作为尺度来衡量和表现一切商品价值的职能，如合同约定房价30万元。
 
@@ -434,7 +434,7 @@
 
 76.**超额剩余价值**：企业由于**提高劳动生产率而使商品的个别价值低于社会价值的差额**。
 
-77.资本家追求超额剩余价值，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
+77.资本家**追求超额剩余价值**，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
 
 78.**资本积累**是指**剩余价值资本化**。**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**，是资本主义社会**失业的根源**。
 
@@ -456,7 +456,7 @@
 
 87.**经济危机抽象的一般的可能性**首先是由**货币作为流通手段和支付手段引起**的。
 
-88.**资本主义经济危机的本质特征**：**生产相对过剩**
+88.**资本主义经济危机的本质特征**：**生产<u>相对</u>过剩**
 
 89.资本主义**经济危机具有周期性**，这是由**资本主义矛盾运动的阶段性决定**的。
 
@@ -489,7 +489,7 @@
 * ②自发地刺激社会生产力的发展
 * ③自发地调节社会收入的分配
 
-069.在马克思之前，古典政治经济学代表人物亚当·斯密已经认识到了**商品的二因素**，提出了**劳动创造价值的观点**。
+069.在**马克思之前**，古典政治经济学代表人物亚当·斯密已经认识到了**商品的二因素**，提出了**劳动创造价值的观点**。
 
 070.**资本主义生产过程**是：①劳动过程	②价值增殖过程
 
@@ -756,7 +756,7 @@
 
 0116.新经济政策的**主要内容**：
 
-1. 用粮食税制取代余粮收集制
+1. 用**粮食税**制取代**余粮收集制**
 2. 允许私人自由贸易，恢复商品货币关系
 3. 允许私人小工业企业发展
 4. 采取一些国家资本主义的形式来发展生产
