:memo:毛泽东思想和中国特色社会主义理论体系概论单项选择知识点

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -58,7 +58,7 @@
 
 20.一个事物只要合乎发展的必然性迟早会变成现实
 
-21.“既要注重总体谋划，又要注重牵住'牛鼻子'”，这句话体现了：要**坚持两点论和重点论的统一**。
+21.“既要注重总体谋划，又要注重牵住‘牛鼻子’”，这句话体现了：要**坚持两点论和重点论的统一**。
 
 22.人类思维从个别到一般，又由一般到隔壁的最常见的推理形式是：**归纳和演绎**
 
@@ -787,3 +787,175 @@
 
 
 ## 毛泽东思想和中国特色社会主义理论体系概论
+
+### 导论 马克思主义中国化时代化的历史进程与理论成果
+
+1.1938年，毛泽东在党的六届六中全会上作了《论新阶段》的报告。**标志着“马克思主义的中国化”这一命题的正式提出**。
+
+2.1945年，党的七大将以毛泽东为主要代表的中国共产党人把马克思列宁主义基本原理同中国具体实际相结合所创造的理论成果，正式命名为毛泽东思想，并规定为党的一切工作的指针。把**毛泽东思想确立为党的指导思想并写入党章**，是**党的七大**的历史性贡献。
+
+### 第一章 毛泽东思想及其历史地位
+
+3.**毛泽东思想形成和发展的基础**——中国共产党领导人民进行**革命**和**建设**的成功实践。
+
+4.毛泽东思想的形成和发展：
+
+| 事件                         | 标志     | 著作                                             |
+| ---------------------------- | -------- | ------------------------------------------------ |
+| 新民主主义革命基本思想的提出 | 萌芽     | 《中国社会各阶级的分析》《湖南农民运动考察报告》 |
+| 深入阐述农包城、武夺政的思想 | 初步形成 |                                                  |
+|                              |          |                                                  |
+
+5.毛泽东思想**活的灵魂**是贯穿于毛泽东思想各个组成部分的**立场、观点、方法**，体现为**实事求是、群众路线、独立自主**三个基本方面。
+
+6.实事求是既是**毛泽东思想的基本点**，又是**毛泽东思想的精髓**。
+
+7.毛泽东指出：“**‘实事’**就是**客观存在着的一切事物**，**‘是’**就是**客观事物的内部联系**，即规律性，‘**求’**就是我们去研究。”
+
+### 第二章 新民主主义革命理论
+
+8.1948年，毛泽东在《晋绥干部会议上的讲话》中完整地总结和概括了总路线的内容，指出“无产阶级领导的、人民大众的，**反对帝国主义、封建主义和官僚资本主义的革命**，这就是中国的新民主主义的革命，这就是中国共产党在当前历史阶段的总路线和总政策。”
+
+9.**无产阶级的领导权**是**中国革命的中心问题**，也是**新民主主义革命理论的核心问题**。
+
+10.在中国民主革命中，**无产阶级领导权的中心问题**是**农民问题**。
+
+11.农民问题乃**国民革命的中心问题**——毛泽东
+
+12.“统帅革命的资产阶级，联合革命的无产阶级，实行资产阶级民主革命。”这一观点的**错误实质**在于**放弃无产阶级的领导权**，因为领导权问题是新、旧民主主义革命的**根本区别**。
+
+13.**“毕其功于一役”“无间断革命”**都是**混淆民主革命与社会主义革命的界限**，主张在民主革命时期就把民族资产阶级作为革命对象，消灭民族资本主义，这是**“左”倾错误**。
+
+**“二次革命论”是右倾错误**。
+
+14.中国革命的：
+
+| 首要问题     | 分清敌友       |
+| ------------ | -------------- |
+| **基本问题** | **农民问题**   |
+| **核心问题** | **领导权问题** |
+| **主要内容** | **土地问题**   |
+
+15.**没收封建地主阶级的土地归农民所有**，是新民主主义经济纲领的三项内容之一，是**新民主主义革命**的**主要内容**。
+
+16.土地改革的**主要和直接任务**，就是**满足贫雇农群众的要求**。
+
+17.**保护民主工商业**，是**新民主主义革命经济纲领中极具特色的一项内容**。
+
+18.新民主主义文化就是无产阶级领导的人民大众的反帝反封建的问候，即民族的科学的大众的文化。其中“民族的”，就其内容说，是指**反对帝国主义压迫，主张中华民族的尊严和独立**。
+
+19.坚持党对军队的绝对领导，这是建设新型人民军队的**根本原则**，是保持人民军队无产阶级性质和建军宗旨的**根本前提**，也是毛泽东建军思想的**核心**。
+
+20.三对三关系：
+
+| 三样法宝                             | 统一战线         | 武装斗争         | 党的建设               |
+| ------------------------------------ | ---------------- | ---------------- | ---------------------- |
+| **中国革命道路的内容**               | **土地革命**     | **武装斗争**     | **农村革命根据地建设** |
+| **毛泽东思想活的灵魂的三个基本方面** | **实事求是**     | **群众路线**     | **独立自主**           |
+| **党的优良传统**                     | **理论联系实际** | **密切联系群众** | **批评与自我批评**     |
+| **巩固抗日民族统一战线的策略总方针** | **发展进步势力** | **争取中间势力** | **孤立顽固势力**       |
+
+21.中国革命建立最广泛的统一战线不仅是必要的，而且是**可能的**，这种可能是由**半殖民地半封建的中国社会的交织交织在一起的诸多矛盾所决定的**。
+
+22.在同资产阶级的联盟中必须实行的方针是：**又联合又斗争**。
+
+23.新民主主义革命时期，**党领导的革命统一战线**包含着两个联盟。其中作为**统一战线的基础**的联盟是**工人阶级同农民阶级、广大知识分子及其他劳动者的联盟，主要是工农联盟**。另一个是**工人阶级和非劳动人民的联盟，主要是与民族资产阶级的联盟**。
+
+24.始终放在党的建设的首位的是：**加强党的思想建设**。党的十九大首次把**党的政治建设**纳入党的建设总体布局。
+
+25.就思想建设而言，中国共产党党内思想上的主要矛盾是：**无产阶级思想和<u>非无产阶级思想</u>之间的矛盾**。
+
+26.**农村革命根据地**是**中国革命的战略阵地**。
+
+### 第三章 社会主义改造理论
+
+27.矛盾变化：
+
+| 时间/类型                            | 矛盾                                                         |
+| ------------------------------------ | ------------------------------------------------------------ |
+| 新中国成立到全国土地改革基本完成期间 | 人民大众同帝国主义、封建主义和国民党反动派残余势力之间的矛盾 |
+| 土地改革基本完成后                   | 工人阶级和资产阶级的矛盾                                     |
+| 社会基本矛盾                         | 生产力与生产关系的矛盾和经济基础与上层建筑的矛盾             |
+| 社会主义改造后                       | 人民日益增长的物质文化需要同落后的社会生产之间的矛盾         |
+
+28.
+
+| 农业社会主义改造遵循原则             | 自愿互利、典型示范和国家帮助                       |
+| ------------------------------------ | -------------------------------------------------- |
+| 对手工业社会主义改造                 | “积极领导、稳步前进”方针                           |
+| 对农业、手工业、资本主义工商业的改造 | 区别对象、积极引导、逐步过渡                       |
+| 经济建设方针                         | 党的八大提出，既反保守又反冒进，即在综合中稳步前进 |
+
+29.社会主义改造中，**高级农业生产合作社**在性质上相一致的手工业的社会主义改造形式是：**手工业生产合作社**
+
+30.对资本主义工商业的社会主义改造经历了三个步骤。第一步（**初级形式的国家资本主义**）和第二步（**个别企业的公私合营**）的**企业利润分配**都是“**四马分肥**”。第三步（**全行业的公私合营**）在分配上实行**定股定息**。
+
+31.从**企业性质**角度来说，三步分别对应：
+
+| 三步   | 企业性质                       |
+| ------ | ------------------------------ |
+| 第一步 | 具有了**社会主义的因素**       |
+| 第二步 | 属于**半社会主义**性质         |
+| 第三步 | 基本上成为**社会主义国营**性质 |
+
+32.第一步实行初级形式的国家资本主义。国家在私营工业中实行委托加工、计划订货、统购包销，这主要是**同资本家在企业外部的合作**。
+
+### 第四章 社会主义建设道路初步探索的理论成果
+
+33.**社会主义基本矛盾运动**具有**“又相适应又相矛盾”的特点**，其中，**相适应的一面是基本方面**，**相矛盾的一面**是**非基本方面**。
+
+34.20世纪50年代中期，毛泽东明确提出要走一条有别于苏联的中国工业化道路。走中国工业化道路主要是强调要正确处理**重工业和轻工业、农业的关系**。
+
+### 第五章 中国特色社会主义理论体系的形成发展
+
+35.**邓小平**在**党的十二大**上提出的一个具有里程碑意义的**重大命题**是**建设有中国特色的社会主义**。从此，“中国特色社会主义”成为我们党的全部理论和实践创新的主题。**这一重大命题的提出具有里程碑意义，是中国共产党人对科学社会主义发展的开创性贡献**。
+
+36.邓小平理论的形成与发展：
+
+| 时间点         | 发展                   |
+| -------------- | ---------------------- |
+| 党的十二大     | 邓小平理论的主题形成   |
+| 党的十三大     | 邓小平理论的轮廓形成   |
+| 1992年南方谈话 | 邓小平理论逐步走向成熟 |
+
+### 第六章 邓小平理论
+
+37.邓小平在领导改革开放和现代化建设这一新的革命过程中，不断提出和反复思考的**首要的基本的理论问题**是**“什么是社会主义、怎样建设社会主义”**
+
+38.**“以经济建设为中心，坚持四项基本原则，坚持改革开放”**（一个中心两个基本点）是实现社会主义现代化奋斗目标的**基本途径**。**“以经济建设为中心”**回答了社会主义的**根本任务问题**，“坚持四项基本原则”回答了解放和发展生产力的**政治保证问题**，“坚持改革开放”回答了社会主义的**发展动力和外部条件问题**。
+
+39.社会主义的**根本任务**是发展生产力。共同富裕是中国特色社会主义的**本质要求**。
+
+40.社会主义**改革**不是原有经济体制的细枝末节的修补，...，不是也不允许否定和抛弃我们建立起来的社会主义基本制度，而是**社会主义制度的自我完善和发展**。
+
+41.动力：
+
+| 方法     | 动力                           |
+| -------- | ------------------------------ |
+| 改革     | 社会主义社会发展的**直接动力** |
+| 阶级斗争 | 阶级社会发展的直接动力         |
+| 科技     | 第一生产力                     |
+| 科技革命 | 社会发展的重要动力             |
+
+42.**和平统一，一国两制”**构想的提出，最早是针对**台湾问题提出来的**。
+
+### 第七章 “三个代表”重要思想
+
+43.要正确认识和处理改革、发展、稳定的关系。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
+
+44.公有制和公有制的实现形式是两个不同层次的问题。**公有制的实现形式是指资产或资本的组织形式和经营方式**。
+
+45.执政兴国的**第一要务**是**发展**
+
+### 第八章 科学发展观
+
+46.科学发展观：
+
+| 科学发展观的 | 是什么？         |
+| ------------ | ---------------- |
+| 第一要义     | 推动经济社会发展 |
+| 核心立场     | 以人为本         |
+| 基本要求     | 全面协调可持续   |
+| 根本方法     | 统筹兼顾         |
+
+47.马克思主义政党**自身建设**的**根本任务和永恒课题**是：**保持和发展党的先进性**
