:memo:毛中特内容更新

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -794,23 +794,46 @@
 
 2.1945年，党的七大将以毛泽东为主要代表的中国共产党人把马克思列宁主义基本原理同中国具体实际相结合所创造的理论成果，正式命名为毛泽东思想，并规定为党的一切工作的指针。把**毛泽东思想确立为党的指导思想并写入党章**，是**党的七大**的历史性贡献。
 
+01.毛泽东思想是关于**中国革命和建设**的正确的理论原则和经验总结，不涉及对**改革经验**的总结问题。中国特色社会主义理论体系是在改革开放之后创立的，不涉及对**革命经验**的总结问题。
+
+（干扰选项×：马克思主义中国化时代化的理论成果是一脉相承又与时俱进的关系。它们**都是**关于中国革命、建设、改革的正确的理论原则和经验总结）
+
+
+
 ### 第一章 毛泽东思想及其历史地位
 
 3.**毛泽东思想形成和发展的基础**——中国共产党领导人民进行**革命**和**建设**的成功实践。
 
 4.毛泽东思想的形成和发展：
 
-| 事件                         | 标志     | 著作                                             |
-| ---------------------------- | -------- | ------------------------------------------------ |
-| 新民主主义革命基本思想的提出 | 萌芽     | 《中国社会各阶级的分析》《湖南农民运动考察报告》 |
-| 深入阐述农包城、武夺政的思想 | 初步形成 |                                                  |
-|                              |          |                                                  |
+| 事件                                     | 标志     | 著作                                             | 时间             |
+| ---------------------------------------- | -------- | ------------------------------------------------ | ---------------- |
+| 新民主主义革命基本思想的提出             | 萌芽     | 《中国社会各阶级的分析》《湖南农民运动考察报告》 | 大革命时期       |
+| 深入阐述农村包围城市、武装夺取政权的思想 | 初步形成 |                                                  | 土地革命战争时期 |
+|                                          |          |                                                  |                  |
 
 5.毛泽东思想**活的灵魂**是贯穿于毛泽东思想各个组成部分的**立场、观点、方法**，体现为**实事求是、群众路线、独立自主**三个基本方面。
 
 6.实事求是既是**毛泽东思想的基本点**，又是**毛泽东思想的精髓**。
 
 7.毛泽东指出：“**‘实事’**就是**客观存在着的一切事物**，**‘是’**就是**客观事物的内部联系**，即规律性，‘**求’**就是我们去研究。”
+
+02.毛泽东明确提出，把马克思列宁主义基本原理同中国具体实际进行“**第二次**结合，找出在中国怎么样建设社会主义道路”的任务。不是“**第二个**结合”（马克思主义基本原理同中华优秀传统文化相结合）。
+
+03.实事求是是
+
+1. 中国共产党的思想路线
+2. 中国共产党人认识世界、改造世界的根本要求
+3. 中国共产党的基本思想方法、工作方法、领导方法
+4. **马克思主义的根本观点**
+
+04.**群众路线**是党的**生命线和根本工作路线**。
+
+05.毛泽东系统解决了如何把以农民为主要成分的革命军队建设成为一支无产阶级性质的、具有严格纪律的、同人民群众保持亲密联系的新型人民军队的的问题，解决了：
+
+1. 如何开展人民革命战争
+2. 应当实行什么样的战略战术
+3. 如何巩固国防等一系列重大方针问题
 
 ### 第二章 新民主主义革命理论
 
@@ -840,7 +863,7 @@
 
 16.土地改革的**主要和直接任务**，就是**满足贫雇农群众的要求**。
 
-17.**保护民主工商业**，是**新民主主义革命经济纲领中极具特色的一项内容**。
+17.**保护民族工商业**，是**新民主主义革命经济纲领中极具特色的一项内容**。
 
 18.新民主主义文化就是无产阶级领导的人民大众的反帝反封建的问候，即民族的科学的大众的文化。其中“民族的”，就其内容说，是指**反对帝国主义压迫，主张中华民族的尊严和独立**。
 
@@ -861,11 +884,99 @@
 
 23.新民主主义革命时期，**党领导的革命统一战线**包含着两个联盟。其中作为**统一战线的基础**的联盟是**工人阶级同农民阶级、广大知识分子及其他劳动者的联盟，主要是工农联盟**。另一个是**工人阶级和非劳动人民的联盟，主要是与民族资产阶级的联盟**。
 
+第二个联盟是非基本的、辅助性的，但又是重要的不可缺少的。因为：
+
+1. 中国民主资产阶级是一个爱国的阶级，在政治上有影响力，在经济上和技术上有重要的作用
+2. 只有建立这个联盟，才能联合一切可以联合的力量，壮大自己，孤立主要敌人
+3. 只有建立这个联盟，无产阶级及其政党才能掌握中国革命的全部领导权
+4. 只有建立这个联盟，中国革命的胜利才有完全的保障
+
 24.始终放在党的建设的首位的是：**加强党的思想建设**。党的十九大首次把**党的政治建设**纳入党的建设总体布局。
 
 25.就思想建设而言，中国共产党党内思想上的主要矛盾是：**无产阶级思想和<u>非无产阶级思想</u>之间的矛盾**。
 
-26.**农村革命根据地**是**中国革命的战略阵地**。
+26.**农村革命根据地**是**中国革命的战略阵地**，是进行武装斗争和开展土地革命的**依托**。
+
+06.新民主主义革命理论形成的**客观条件**有：
+
+1. 旧民主主义革命的失败
+2. 近代中国革命形式的发展
+3. 世界形势的新变化
+
+**理论层面**有：
+
+* 对于中国革命经验教训的概括和总结（不属于**客观条件**）
+
+07.抗日战争时期中共巩固和扩大抗日民主统一战线的策略方针——**发展进步势力、争取中间势力、孤立顽固势力**。抗日战争时期中共对顽固派斗争的策略——**有理、有利、有节**。
+
+08.毛泽东提出，无产阶级及其政党要实现对同盟者的领导必须具备的条件有：
+
+1. 率领同盟者向着共同的敌人作坚决斗争并取得胜利
+2. 对同盟者给以物质福利，至少不损害其利益，同时给以政治教育
+
+09.关于新民主主义政治纲领所规定的新民主主义国家：
+
+* 国体是各革命阶级联合专政
+* 政体是实行民主集中制的人民代表大会制度
+* 新民主主义共和国是一定历史时期的国家性质，是过渡的形式
+* 人民当家作主是新民主主义国家制度的核心内容和基本准则
+
+010.新民主主义经济纲领的内容：
+
+1. 没收封建地主阶级的土地归农民所有
+2. 没收官僚资产阶级的垄断资本归新民主主义国家所有
+3. 保护民族工商业（极具特色的内容）
+
+（没有没收外国在华资本归新民主主义国家所有）
+
+011.反对官僚资本主义**并非因为它是资本主义，而**
+
+1. **是因为**这种资本主义同外国帝国主义、本国地主阶级和旧式富农密切地结合着，是一种买办的、封建的国家垄断资本主义；
+2. **是因为**这种资本主义是同大地主、大资产阶级的反革命国家政权密切结合着，成为国民党政治统治的经济基础；
+3. **是因为**这种资本主义对中国的经济发展和社会进步骑着严重的阻碍作用
+
+因此，也是中国革命的对象。
+
+012.中国走农村包围城市、武装夺取政权道路的依据是：
+
+1. 农民占全国人口的绝大多数，是无产阶级可靠的同盟军和革命的主力军
+2. 当时的中国内无民主制度而受封建主义的压迫，外无民族独立而受帝国主义的压迫
+
+无产阶级是革命的**领导阶级**，不是中国走农村包围城市、武装夺取政权道路的依据。俄国十月革命也是无产阶级领导的，但走的却是城市包围农村的道路。
+
+013.党之所以能够深入农村积蓄革命力量，建设农村革命根据地，最终实现农村包围城市、武装夺取政权，其原因是：
+
+1. 近代中国是多个帝国主义间接统治的半殖民地国家，社会政治经济发展极端不平衡
+2. 经过大革命的洗礼，革命的群众基础好
+3. 全国革命形式的继续向前发展
+4. 相当力量正式红军的存在，以及党的领导的有力量及其政策的不错误
+
+014.中国革命必须建立最广泛的统一战线，这是由：
+
+1. 中国半殖民地半封建社会的阶级状况所决定的
+2. 中国革命的长期性、残酷性及其发展的不平衡性所决定的
+
+半殖民地半封建中国社会的交织在一起的诸多矛盾，**决定的是建立最广泛的统一战线的可能性，不是必要性**。
+
+015.**近代中国社会的阶级结构**是**“两头小中间大”**，“中间”是指：**农民、城市小资产解决以及其他中间阶级，占多数**。“两头”的一头是**无产阶级**，另一头是**地主大资产阶级**。
+
+016.新民主主义革命时期，党领导的统一战线，先后经过了第一次国共合作的**国民革命联合战线**、工农民主统一战线、**抗日民族统一战线**、人民民主统一战线等几个时期。加粗两个统一战线有国共合作为基础。
+
+017.人民军**队政治工作**的**基本原则**：
+
+1. 官兵一致
+2. 军民一致
+3. 瓦解敌军和优待俘虏
+
+018.坚持党对军队的绝对领导的内容
+
+* 支部建在连上
+
+019.1949年3月七届二中全会上，毛泽东提出“两个务必”的思想，即“务必使同志们继续地保持**谦虚、谨慎、不骄、不躁的作风**，务必使同志们继续地保持**艰苦奋斗的作风**。
+
+020.党的**十六大**以后才开始突出强调注意**党的执政能力建设**。
+
+021.毛泽东在系统论述新民主主义革命的基本经验时，精辟地论述了统一战线、武装斗争和党的建设三者之间的关系。他指出，**统一战线和武装斗争**是**中国革命的两个基本特点**，是**战胜敌人的两个基本武器**。
 
 ### 第三章 社会主义改造理论
 
@@ -959,3 +1070,7 @@
 | 根本方法     | 统筹兼顾         |
 
 47.马克思主义政党**自身建设**的**根本任务和永恒课题**是：**保持和发展党的先进性**
+
+48.坚持中国特色社会主义政治发展道路，**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
+
+其中，党的领导是人民当家作主和依法治国的**根本保证**，人民当家作主是社会主义民主政治的**本质和核心**，依法治国是党领导人民治理国家的**基本方略**。
