--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1035,7 +1035,7 @@
 
 38.**“以经济建设为中心，坚持四项基本原则，坚持改革开放”**（一个中心两个基本点）是实现社会主义现代化奋斗目标的**基本途径**。**“以经济建设为中心”**回答了社会主义的**根本任务问题**，“坚持四项基本原则”回答了解放和发展生产力的**政治保证问题**，“坚持改革开放”回答了社会主义的**发展动力和外部条件问题**。
 
-39.社会主义的**根本任务**是发展生产力。共同富裕是中国特色社会主义的**本质要求**。
+39.社会主义的**根本任务**是**发展生产力**。**共同富裕**是中国特色社会主义的**本质要求**。
 
 40.社会主义**改革**不是原有经济体制的细枝末节的修补，...，不是也不允许否定和抛弃我们建立起来的社会主义基本制度，而是**社会主义制度的自我完善和发展**。
 
